[package]
name = "gl-from-raw-window-handle"
version = "0.1.1"
authors = ["Wouter de Bruijn <wouter@wutru.io>"]
edition = "2021"
description = "Library for creating an OpenGL context from a RawWindowHandle"
repository = "https://github.com/cloone8/gl-from-raw-window-handle"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
raw-window-handle = "0.6.2"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = [
    "libloaderapi",
    "minwindef",
    "ntdef",
    "windef",
    "wingdi",
    "winnt",
    "winuser",
] }
uuid = { version = "1.9.1", features = ["v4"] }

[target.'cfg(target_os="linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "glx"] }

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
core-foundation = "0.9.4"
